<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textSesion"
        android:layout_width="wrap_content"


        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/inicio"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textview.MaterialTextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsuario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:hint="@string/layoutUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSesion"
        app:helperText="@string/obligatorio"
        app:counterMaxLength="21"
        app:counterEnabled="true"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textoUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutContra"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:hint="@string/layoutContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutUsuario"
        app:helperText="@string/obligatorio"
        app:counterMaxLength="21"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonEntrar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/botonEntrar"
        app:layout_constraintStart_toStartOf="@id/layoutContra"
        app:layout_constraintTop_toBottomOf="@+id/layoutContra"
        android:layout_marginTop="64dp"
        >

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonSalir"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/botonSalir"
        app:layout_constraintEnd_toEndOf="@id/layoutContra"
        app:layout_constraintTop_toBottomOf="@+id/layoutContra"
        android:layout_marginTop="64dp"
        >

    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>
